--- a/Natural_Language_Processing_(NLP)_With_Recurrent_Neural_Network_(RNN)_.ipynb
+++ b/Natural_Language_Processing_(NLP)_With_Recurrent_Neural_Network_(RNN)_.ipynb
@@ -34,7 +34,7 @@
         "id": "Z4O6WlOaQY_1"
       },
       "source": [
-        "remixed by [*Pedro St Clair*](http://github.com/pedrostclair)"
+        "[*Pedro St Clair*](http://github.com/pedrostclair)"
       ]
     },
     {
